===============================================================================
                           NEWS for Extreme Tux Racer
===============================================================================

Version 0.7.2
-------------------------------------------------------------------------------
- Removed unused font outline.ttf from the distribution


Version 0.7.1                                             5th of February, 2016
-------------------------------------------------------------------------------
Bugfix release

- Fixed use of user provided CPPFLAGS
- "I Like Spike" course installed to correct location
- Added preview images for all courses that were missing one
- Added keywords to the desktop file
- Do not try to save screenshots to read-only location but to user
  home directory


Version 0.7                                               23th of January, 2016
-------------------------------------------------------------------------------

Besides several small improvements and bugfixes, the new Extreme Tux Racer
version 0.7 features the following changes:

- SFML 2 replaced SDL 1 as multimedia library:
   -> significant code cleanup,
   -> allows changing screen resolution and fullscreen/windowed mode at runtime,
   -> performance improvements, especially in menus.
- Rewritten GUI, providing similar look, but more features, such as keyboard
  navigation.
- New performance level '4' has been added, providing high resolution textures
  for the skybox.
- Courses are now be organized in groups
- Courses from the extremetuxracer-extras package were added to the project
- Course names and descriptions are now translatable
- Code cleanup and modernization towards C++11 continued


Version 0.6                                                13th of August, 2013
-------------------------------------------------------------------------------

Entire project has been rebooted with new team. Extreme Tux Racer version 0.6